k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: cicd
spec:
  selector:
    app: k8s-app
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
