k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: cicd
  labels:
    app.kubernetes.io/name: myingress
spec:
  rules:
    - host: app.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-service
                port:
                  number: 8000
